2024-02-08 : many saves editor bug fixes.