@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.13)
 
 project( Breakout4 LANGUAGES CXX )
 
+#If you don't need wxWidgets framework set the boolean below to OFF ('ON' else).
+#The games like 'Bob the blob' or 'SDL2_WarrenTetris' don't need wxWidgets framework at all.
+#In 'Breakout4' game you can choose if you don't want to use wxWidgets, but you won't build wxSavesEditor and wxLevelEditor.
+set( USE_WX_WIDGETS_FRAMEWORK ON BOOL )
+
 if( DEFINED SQUARE_SIZE )
 	file( WRITE "libraries/commonFiles/sources/consts/squareSize.h" "constexpr int SQR_SIZE = ${SQUARE_SIZE};" )
 	message( WARNING "You defined the SQUARE_SIZE value as: ${SQUARE_SIZE}" )
@@ -13,10 +18,10 @@ endif()
 
 set( CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON )
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmakeModules)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmakeModules)
 
-#set this path to the built WarrenGamesCustomLibs libraries directory (needed below at line 40)
-set( WARREN_LIBS_BUILDING_PATH "/media/antoine/projetsLinux/projects/warrenLibs/cmake/builtCustomLibs" )
+#set this path to the built WarrenGamesCustomLibs libraries directory (needed below at line 51) (use a canonical path, not a relative one)
+set( WARREN_LIBS_BUILDING_PATH "/media/antoine/projetsLinux/temp/CmakeAndWxWidgetsOption/builtWarrenCustomLibs" )
 
 set( WARREN_STATIC_LIBS_DIR "builtArchives" )
 set( WARREN_LIBS_INCLUDES_PATH "${WARREN_LIBS_BUILDING_PATH}/includes" )
@@ -24,9 +29,11 @@ set( WARREN_LIBS_STATIC_LIBS_PATH "${WARREN_LIBS_BUILDING_PATH}/${WARREN_STATIC_
 
 if(WIN32)
     set( SDL2_DIR "" )
-    set( wxWidgets_ROOT_DIR "" )
-    set( wxWidgets_INCLUDE_DIRS "" )
-    set( wxWidgets_LIB_DIR "" )
+    if( USE_WX_WIDGETS_FRAMEWORK EQUAL ON )
+		set( wxWidgets_ROOT_DIR "" )
+		set( wxWidgets_INCLUDE_DIRS "" )
+		set( wxWidgets_LIB_DIR "" )
+	endif()
 endif(WIN32)
 
 find_package(SDL2 REQUIRED)
@@ -34,14 +41,16 @@ find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 find_package(SDL2_mixer REQUIRED)
 
-set( wxWidgets_CONFIGURATION mswu )
-find_package( wxWidgets COMPONENTS core base REQUIRED )
+if( USE_WX_WIDGETS_FRAMEWORK EQUAL ON )
+	set( wxWidgets_CONFIGURATION mswu )
+	find_package( wxWidgets COMPONENTS core base REQUIRED )
+	add_subdirectory(executables/wxLevelEditor)
+	add_subdirectory(executables/wxSavesEditor)
+endif()
 
 link_directories( ${WARREN_LIBS_STATIC_LIBS_PATH} )
 
 add_subdirectory(executables/game)
-add_subdirectory(executables/wxLevelEditor)
-add_subdirectory(executables/wxSavesEditor)
 add_subdirectory(libraries/commonFiles)
 add_subdirectory(libraries/consts)
 add_subdirectory(libraries/demosLibrary)
@@ -55,16 +64,31 @@ if(UNIX)
 	install( 
 		TARGETS 
 			game 
-			wxLevelEditor 
-			wxSavesEditor 
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
 	)
 else()
 	install( 
 		TARGETS 
 			game 
-			wxLevelEditor 
-			wxSavesEditor 
 		RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} COMPONENT Runtime
 	)
 endif(UNIX)
+
+if( USE_WX_WIDGETS_FRAMEWORK EQUAL ON )
+	if(UNIX)
+		include(GNUInstallDirs)
+		install( 
+			TARGETS
+				wxLevelEditor 
+				wxSavesEditor 
+			RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+		)
+	else()
+		install( 
+			TARGETS
+				wxLevelEditor 
+				wxSavesEditor 
+			RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} COMPONENT Runtime
+		)
+	endif(UNIX)
+endif()
